--- a/app/index.html
+++ b/app/index.html
@@ -12,15 +12,15 @@
     </div>
     <div>
         <div class="panel-body text-center">
-            <div class="alert alert-info" role="alert">Good news!</div>
+            <div class="alert alert-info" role="alert" id="Milego dnia">Good news!</div>
 
         </div>
     </div>
     <div class="jumbotron text-center">
-        <span class="label label-warning">ABC</span>
-        <span class="label label-warning">CDE</span>
+        <span class="label label-warning" id="Pozdrowienia">ABC</span>
+        <span class="label label-warning"id="uszankowanko">CDE</span>
     </div>
-    <input class="form-control" value="Kolokwium"/>
+    <input class="form-control" value="Kolokwium" id="input"/>
 
 </div>
 <script src="bower_components/angular/angular.js"></script>
